--- a/Hangfire-Explorer/Views/Home/Index.cshtml
+++ b/Hangfire-Explorer/Views/Home/Index.cshtml
@@ -3,6 +3,16 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Hangefire Explorer</h1>
+    <p>Test some Hangfire functionalities.</p>
+</div>
+
+<div class="text-center">
+    <input type="button"
+           value="Create Retry Exception"
+           onclick="location.href='@Url.Action("Exception", "Home")'" />
+
+    <input type="button"
+           value="Create Recurring Jobs"
+           onclick="location.href='@Url.Action("Recurring", "Home")'" />
 </div>
